新增範例網址

--- a/_posts/2017/2017-08-23-example.markdown
+++ b/_posts/2017/2017-08-23-example.markdown
@@ -3,10 +3,10 @@ layout: post
 title:  "心得範例"
 categories: feedback
 tags: [feedback, example, tutorial]
-no-post-nav: flase
+no-post-nav: false
 ---
 
-# Title
+# ( ～'ω' )～
 
 ## title 1 (・ε・) 
 
@@ -16,7 +16,7 @@ no-post-nav: flase
 
 - 上方的 `categories` 跟 `tags` 統一都使用 `feedback` 
 
-- 如果想看這頁的原始碼 [請點這]()
+- 如果想看這頁的原始碼 [請點這](https://raw.githubusercontent.com/hellojs-tw/blog/master/_posts/2017/2017-08-23-example.markdown)
 
 - 還是有障礙就直接複製這個下去改吧!
 
